--- a/index.html
+++ b/index.html
@@ -4,65 +4,56 @@
 <head>
   <meta charset="utf-8">
   <title>Felipe de Queiroz Telles</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td>
-        <img src="https://yt3.ggpht.com/ytc/AKedOLSqiM0qDE_5E-itqwPWpy4c81_DVj8nAaChcvi0ex4=s900-c-k-c0x00ffffff-no-rj" alt="felipe profile picture" width="200" height="200">
-      </td>
-      <td>
-        <h1>Felipe de Queiroz Telles</h1>
-    <p><em>Bacharel em Direito pela <a href="https://www.unicuritiba.edu.br/">Unicuritiba</a></em>
-      <br><em>Programador em formação</em>
-    </p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at aliquam turpis, ut venenatis mi. Nulla id nisi scelerisque, dictum erat non, placerat lacus. Phasellus nec molestie nisi. Integer semper vehicula purus vitae pellentesque. Nunc nec
-      faucibus neque. Aenean a scelerisque risus. Cras pellentesque orci ligula, et faucibus eros bibendum eget. Donec vehicula est ipsum, eu cursus risus mollis eu. Sed at sapien ligula. Praesent rutrum mi ut tortor ornare, non blandit nibh posuere.
-      Aenean eget dolor at nisi rhoncus dignissim sed eget metus. Praesent a placerat ipsum, eu hendrerit est. Aliquam eget tristique arcu.</p>
-    </td>
-    </tr>
-  </table>
-      <hr>
-  <h3>Books and teaching</h3>
-  <ul>
-    <li>Vestibulum consectetur pharetra sollicitudin. Maecenas arcu nibh, pharetra et eros eget, auctor venenatis mi.</li>
-    <li>Integer at elit consectetur, ultricies augue in, fringilla quam.</li>
-    <li><a href="https://www.wizardingworld.com/">Harry Potter</a></li>
-    <li>Vivamus venenatis dolor eget urna iaculis pulvinar.</li>
-    <li>Nulla volutpat nisl faucibus risus vulputate, et consequat urna suscipit.</li>
-  </ul>
-  <hr>
-  <h3>Experiência de trabalho</h3>
-  <table cellspacing="10">
-    <thead>
-      <th>Datas</th>
-      <th>Trabalho</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2010-2023</td>
-        <td>Assessor Jurídico no Tribunal de Justiça do Estado do Paraná</td>
-      </tr>
-        <td>2015-2020</td>
-        <td>Lorem ispum</td>
-    </tbody>
-  </table>
-<hr>
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>Inglês ⭐⭐⭐⭐⭐
-      <br>
-      Teste ⭐⭐⭐</td>
-      <td>HTML ⭐⭐
-        <br>
-      Python ⭐</td>
-    </tr>
-  </table>
-  <hr>
-  <h3><a href="hobbies.html">Hobbies</a></h3>
-  <h3><a href="contact.html">Contato</a></h3>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-top">
+    <h1>I'm Felipe,</h1>
+    <h2>a <span class="pro">pro</span>grammer</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-bottom">
+    <img src="images/mountain.png" alt="mountain">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="https://i.imgur.com/bn2x3ex.png" alt="felipe profile picture" width="200px" height="200px">
+      <h2>Hello World.</h2>
+      <p class="hello">Sou Bacharel em Direito e atualmente estou cursando Análise e Desenvolvimento de Sistemas, buscando uma transição de carreira para a área de Tecnologia da Informação (TI), com foco em programação.</p>
+      <p>⚖💻</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="img-html" src="images/html-flat.png" alt="html">
+        <h3>Lorem & Ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      </div>
+      <div class="skill-row">
+        <img class="img-css" src="images/css-flat.png" alt="css">
+        <h3>Lorem Ipsum Dolor</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Entre em contato</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="mailto:telles7@gmail.com">CONTATO</a>
+    </div>
+  </div>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/felipe-de-queiroz-telles-36b64524/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/fq_telles">Twitter</a>
+    <a class="footer-link" href="https://fqtelles.github.io/cv/">Website</a>
+    <p class="copyright">© Felipe de Queiroz Telles.</p>
+  </div>
 </body>
 
 </html>
